--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,12 +7,25 @@ body {
 
 nav ul {
     display: flex;
-    justify-content: space-around;
+    justify-content: flex-end;
+    align-items: center;
     text-decoration: none;
-    width: 20%;
+    padding: 20px;
+    width: 100%;
+    height: 75px;
     list-style: none;
     position: absolute;
     right: 0;
+    box-shadow: 0 0 5px 5px #C4C4C4;
+    background-color: #1240AB;
+}
+nav ul li {
+    padding: 30px;
+    color: #fff;
+}
+nav ul li i {
+    font-size: 25px;
+    color: #fff;
 }
 
 /* END NAVBAR */
