--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,14 +7,14 @@ body {
 
 nav ul {
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-start;
     align-items: center;
     text-decoration: none;
     padding: 20px;
     width: 100%;
     height: 75px;
     list-style: none;
-    position: absolute;
+    position: fixed;
     right: 0;
     box-shadow: 0 0 5px 5px #C4C4C4;
     background-color: #1240AB;
@@ -26,10 +26,6 @@ nav ul li {
 nav ul li i {
     font-size: 25px;
     color: #fff;
-}
-input#marginHidden {
-    display:hidden;
-    margin-top: 3em;
 }
 
 /* END NAVBAR */
