--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,26 +5,27 @@ body {
 
 /* NAVBAR */
 
-nav ul {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    text-decoration: none;
+nav {
     padding: 20px;
     width: 100%;
     height: 75px;
-    list-style: none;
-    position: fixed;
-    right: 0;
+    position: fixed;    
     box-shadow: 0 0 5px 5px #C4C4C4;
     background-color: #1240AB;
+}
+nav > div#navbarNav {
+    display: flex;
+    justify-content: flex-end;
 }
 nav ul li {
     padding: 30px;
     color: #fff;
 }
-nav ul li i {
-    font-size: 25px;
+nav ul li i, nav a {
+    font-size: 20px;
+    color: #fff;
+}
+nav a:hover {
     color: #fff;
 }
 
@@ -145,3 +146,57 @@ a {
     background: lightgray;
 }
 /* END HOME PAGE */
+
+/* SELECT DAY RESERVATION IN CALENDAR PAGE */
+div#divCalendari, div#navCalendari {
+    font-size: 20px;
+}
+div#divCalendari > table th, div#divCalendari > table td {
+    border-top: none;
+    border-bottom: none;
+}
+.diaMes {
+    border-radius: 5px;
+    background-color: #F2F2F2;
+    box-shadow: 0 0 1px 1px #C4C4C4;
+    transition: box-shadow 1s, background-color 0.1s, border 0.5s;
+}
+.diaMes:hover {
+    border: 1px solid #0091ff;
+    border-radius: 5px;
+    box-shadow: 0 0 3px 3px #C4C4C4;
+    transition: box-shadow 1s, background-color 0.1s, border 0.5s;
+}
+.diesFestius {
+    color: #C50000;
+    font-weight: bold;
+}
+.diaActual {
+    color: #0D3184;
+    font-weight: bold;
+}
+div#navCalendari {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+div#navCalendari p {
+    font-size: 23px;
+}
+div#navCalendari button {
+    width: 40px;
+    height: 35px;
+    border: 1px solid #0091ff;
+    border-radius: 3px;
+    background-color: #0091ff;
+    color: #ffffff;
+    transition: box-shadow 1s;
+}
+div#navCalendari button:hover {
+    box-shadow: 0 0 0 5px #72C2FF;
+    transition: box-shadow 1s;
+}
+div#navCalendari button i {
+    font-size: 15px;
+}
