--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,27 +6,47 @@ body {
 /* NAVBAR */
 
 nav {
-    padding: 20px;
+    position: fixed;
+    z-index: 2;
+    top: 0;
     width: 100%;
-    height: 75px;
-    position: fixed;    
     box-shadow: 0 0 5px 5px #C4C4C4;
     background-color: #1240AB;
 }
-nav > div#navbarNav {
+nav#menu > div > div#navbarNav {
     display: flex;
+    flex-direction: row;
     justify-content: flex-end;
 }
-nav ul li {
-    padding: 30px;
-    color: #fff;
-}
-nav ul li i, nav a {
+nav#menu ul > li > a, nav#menu > div > a {
+    display: flex;
+    align-items: center;
+    height: 70px;
+    padding: 20px;
     font-size: 20px;
     color: #fff;
+    text-decoration: none;
+    transition: transform 1s, background-color 1s, color 1s;
 }
-nav a:hover {
+nav#menu ul > li > a:hover{
+    transform: translate(0px, -3px);
+    transition: transform 1s, background-color 1s, color 1s;
+}
+nav#menu li:hover > ul {
+    display: block;
+}
+nav#menu ul ul {
+    right: 3px;
+    top: auto;
+    background-color: #1240AB;
+}
+nav#menu ul ul > li > a {
+    font-size: 15px;
     color: #fff;
+}
+nav#menu ul ul > li > a:hover {
+    color: #fff;
+    background-color: #1240AB;
 }
 
 /* END NAVBAR */
