--- a/public/css/style.css
+++ b/public/css/style.css
@@ -47,6 +47,9 @@ nav#menu ul ul > li > a:hover {
     color: #fff;
     background-color: #1240AB;
 }
+.fa-bars {
+    color: #fff;
+}
 
 /* END NAVBAR */
 
