--- a/public/css/style.css
+++ b/public/css/style.css
@@ -205,6 +205,7 @@ a {
     justify-content: center;
     align-items: center;
     text-align: center;
+    flex-direction: column;
 }
 
 .reservation-form {
