--- a/public/css/style.css
+++ b/public/css/style.css
@@ -58,8 +58,11 @@ nav#menu ul ul > li > a:hover {
 .missatge-login {
     padding: 10px;
     border-radius: 15px;
-    background-color: #ff0000;
+    background-color: #970808;
     color: #fff;
+}
+.login-body {
+    background-color: #9F9494;
 }
 .login-container {
     display: flex;
@@ -76,32 +79,36 @@ nav#menu ul ul > li > a:hover {
     align-items: center;
     height: 500px;
     width: 400px;
-    background: rgb(189,92,243);
-    background: linear-gradient(0deg, rgba(189,92,243,1) 0%, rgba(100,143,243,1) 50%); 
+    background-color: #fff;
     border-radius: 20px;
     box-shadow: 5px 5px 20px 5px rgba(0, 0, 0, 0.5);
 }
 
 .login-form div input {
     margin: 5px;
+    border: 1px solid #000;
+    border-radius: 5px;
+    background-color: #fff;
+}
+
+.login-form div i {
+    font-size: 23px;
+    color: #000;
 }
 
 .login-form button {
     margin-top: 25px;
-}
-
-button#login {
     width: 150px;
     height: 50px;
-    border: 1px solid #0091ff;
+    border: 1px solid #1240AB;
     border-radius: 3px;
     font-size: 20px;
-    background-color: #0091ff;
+    background-color: #1240AB;
     color: #ffffff;
     transition: box-shadow 1s;
 }
-button#login:hover {
-    box-shadow: 0 0 0 5px #72C2FF;
+.login-form button:hover {
+    box-shadow: 0 0 0 5px #365BB0;
     transition: box-shadow 1s;
 }
 
@@ -244,20 +251,28 @@ div#divCalendari > table th, div#divCalendari > table td {
     border-radius: 5px;
     background-color: #F2F2F2;
     box-shadow: 0 0 1px 1px #C4C4C4;
-    transition: box-shadow 1s, background-color 0.1s, border 0.5s;
+    transition: background-color 0.5s;
 }
 .diaMes:hover {
-    border: 1px solid #0091ff;
-    border-radius: 5px;
-    box-shadow: 0 0 3px 3px #C4C4C4;
-    transition: box-shadow 1s, background-color 0.1s, border 0.5s;
+    background-color: #C9C7C7;
+    transition: background-color 0.5s;
 }
 .diesFestius {
     color: #C50000;
     font-weight: bold;
 }
+.diaMesActual {
+    border-radius: 5px;
+    background-color: #0D3184;
+    box-shadow: 0 0 1px 1px #C4C4C4;
+    transition: background-color 0.5s;
+}
+.diaMesActual:hover {
+    background-color: #011543;
+    transition: background-color 0.5s;
+}
 .diaActual {
-    color: #0D3184;
+    color: #fff;
     font-weight: bold;
 }
 div#navCalendari {
