--- a/public/css/style.css
+++ b/public/css/style.css
@@ -169,23 +169,65 @@ button#login:hover {
 
 /* USER */
 
-.index-user-container {
-    display: flex;
-    height: 95vh;
-    justify-content: center;
-    text-align: center;
-    align-items: center;
-    flex-direction: column;
+@media screen and (min-width: 901px) {
+    .index-user-container {
+        display: flex;
+        min-height: 95vh;
+        justify-content: center;
+        text-align: center;
+        align-items: center;
+        flex-direction: column;
+        border-bottom: 2px solid black;
+        gap: 20px;
+    }
+    
+    .index-user-container2 {
+        display: flex;
+        height: 15vh;
+        width: 80%;
+        justify-content: space-around;
+        text-align: center;
+        align-items: center;
+    }
+
+    .imatge-sala2 {
+        width: 125px;
+        height: 125px;
+    }
+}
+@media screen and (max-width: 900px) {
+    .index-user-container {
+        display: flex;
+        min-height: 95vh;
+        justify-content: center;
+        text-align: center;
+        align-items: center;
+        flex-direction: column;
+        margin: 50px 0;
+        gap: 20px;
+    }
+    
+    .index-user-container2 {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 20px;
+        width: 90%;
+        min-height: 500px;
+        box-shadow: 5px 5px 5px 5px gray;
+        border-radius: 7px;
+    
+    }
+
+    .imatge-sala2 {
+        width: 100%;
+        height: 100%;
+    }
 }
 
-.index-user-container2 {
-    display: flex;
-    height: 15vh;
-    width: 80%;
-    justify-content: space-around;
-    text-align: center;
-    align-items: center;
-    border-bottom: 2px solid black;
+.delete-btn {
+    margin-bottom: 30px;
 }
 
 .column-container {
@@ -274,15 +316,6 @@ a {
 
 /* RESERVATION PAGE */
 
-.flex-column-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    flex-direction: column;
-    margin: 0 13px;
-}
-
 #cont {
     margin-top: 50px;
 }
@@ -348,9 +381,44 @@ a {
     flex-direction: column;
 }
 
-.reservation-form {
+.flex-column-container2 {
     display: flex;
-    margin-top: 75px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin: 0 13px;
+}
+
+@media screen and (min-width: 901px) {
+    .reservation-form {
+        display: flex;
+        margin-top: 75px;
+    }
+
+    .flex-column-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        flex-direction: column;
+        margin: 0 13px;
+    }
+}
+@media screen and (max-width: 900px) {
+    .reservation-form {
+        display: flex;
+        flex-direction: column;
+        margin-top: 75px;
+    }
+
+    .flex-column-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        margin: 0 13px;
+    }
 }
 
 .reservation-form input,
