--- a/public/css/style.css
+++ b/public/css/style.css
@@ -195,7 +195,39 @@ button#login:hover {
         height: 125px;
     }
 }
-@media screen and (max-width: 900px) {
+
+@media screen and (min-width: 701px) and (max-width: 900px) {
+    .index-user-container {
+        display: flex;
+        min-height: 95vh;
+        justify-content: center;
+        text-align: center;
+        align-items: center;
+        flex-direction: column;
+        margin: 50px 0;
+        gap: 20px;
+    }
+    
+    .index-user-container2 {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 20px;
+        width: 50%;
+        min-height: 500px;
+        box-shadow: 5px 5px 5px 5px gray;
+        border-radius: 7px;
+    
+    }
+
+    .imatge-sala2 {
+        width: 100%;
+        height: 100%;
+    }
+}
+
+@media screen and (max-width: 700px) {
     .index-user-container {
         display: flex;
         min-height: 95vh;
