dashboard disseny casi final per fi :-)

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -596,7 +596,7 @@ div#navCalendari button i {
 }
 
 /*PANELL ADMINISTRADOR*/
-div#sidebaradmin i.fas {
+div#sidebaradmin i.fas, div#sidebaradmin i.far {
     display: flex;
     justify-content: center;
     font-size: 25px;
